used flexbox for better positioning

--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body{
     background-color: #2196F3;
+    margin: 0;
+    padding: 0;
 }
 
 #wrap{
-    margin-top: 25%;
-    text-align: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #day{
@@ -21,11 +26,12 @@ body{
 }
 
 #modify{
-    width: 400px;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    margin-left: -200px;
     margin-bottom: 10px;
 }
 
