--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body{
     background-color: #2196F3;
+    margin: 0;
 }
 
+.button:hover{
+    cursor: pointer;
+}
 #wrap{
     margin-top: 25%;
     text-align: center;
