--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     background-color: #2196F3;
     margin: 0;
-<<<<<<< HEAD
-=======
     padding: 0;
->>>>>>> ab2690f8beb76f2f1a8ef31a86478612ecfa5cda
+    transition-duration: 0.5s;
+    transition-property: all;
+    transition-timing-function: ease-in;
 }
 
 .button:hover{
